[package]
name = "pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version="4.4.18", features=["derive"] }
colored = "2.1.0"
crossbeam-channel = "0.5.11"
serde = { version="1.0.196", features=["derive"] }
serde_json = "1.0.113"
signal-hook = "0.3.17"
users = "0.11.0"
